# electron-with-rust

./: .eslintrc.js  .gitattributes  .gitignore  README.md  babel.config.js  package.json  tsconfig.json
app/: app.dev.html  app.global.css  app.prod.html  index.tsx  main.prod.js.LICENSE.txt  main.ts  native.ts  package.json
app/components/FileItem/: index.tsx
app/components/ReceiveFileItem/: index.css  index.tsx
app/components/SendFileItem/: index.css  index.tsx
app/containers/App/: index.tsx
app/containers/Foo/: index.css  index.tsx
app/containers/Home/: index.css  index.tsx
app/store/: configureStore.ts
app/types/: index.ts
app/utils/: index.ts
configs/: webpack.config.base.js  webpack.config.eslint.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js
native/: .gitignore  Cargo.toml  build.rs
native/src/: error.rs  lib.rs  runtime.rs
native/src/ext/: eh.rs  json_stream.rs  mod.rs  object.rs
native/src/helpers/: mod.rs
native/src/prelude/: mod.rs
native/src/runtime/: mod.rs
native/src/tasks/: async_task.rs  fetch.rs  foo.rs  mod.rs
native/src/transfer/: mod.rs
native/src/transfer/client/: mod.rs
native/src/transfer/server/: mod.rs
native/src/types/: mod.rs
native/src/utils/: mod.rs
